refactor: 게시판 예외 처리 및 조회 정책 정비 #90
- BoardPolicyException 도입으로 게시판 도메인 예외 타입 통일
- 목록 조회 정책(기본 조회 vs 검색/필터) 검증 로직 정리
- 게시글 상태 파라미터 정규화(ALL/빈값 처리) 로직 보완
- 댓글 수 집계 N+1 문제 개선 및 응답 DTO 반영
- BoardPost / BoardComment 서비스 로직 리뷰 사항 반영